# poc_topic_generator

./: .gitignore  README.md  pyproject.toml
src/: api.py
src/poc_topic_generator/: crew.py  main.py
src/poc_topic_generator/config/: agents.yaml  tasks.yaml
